[project]
name = "antimatter-nodes"
version = "0.1.1"
description = "AntiMatter custom nodes for ComfyUI, including Flux, Z-Image, and ERNIE-oriented aspect ratio tools."
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/AntiMatterComfy/antimatter-nodes"
Issues = "https://github.com/AntiMatterComfy/antimatter-nodes/issues"

[tool.comfy]
PublisherId = "antimatter"
DisplayName = "AntiMatter Nodes"
