[project]
name = "antimatter-nodes"
version = "0.2.0"
description = "AntiMatter custom nodes for ComfyUI, including aspect ratio and folder batch loading tools."
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/AntiMatterComfy/antimatter-nodes"
Issues = "https://github.com/AntiMatterComfy/antimatter-nodes/issues"

[tool.comfy]
PublisherId = "antimatter"
DisplayName = "AntiMatter Nodes"
